--- a/src/styles/sub/_members.scss
+++ b/src/styles/sub/_members.scss
@@ -1,167 +1,253 @@
-.members {
-	.ceoBox {
-		width: 100%;
-		display: flex;
+@import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif+KR:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+$margin: 150px;
+
+main {
+	width: 100%;
+	padding: 10vh 15vw;
+	min-height: 120vh;
+	font-family: 'Noto Serif KR';
+}
+
+.ceoBox {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: $margin;
+	.story {
+		width: 40%;
+		height: 100%;
 		flex-wrap: wrap;
 		justify-content: space-between;
-		margin-bottom: 150px;
-
-		.txt {
-			width: 45%;
+		.ceoTitle {
 			display: flex;
-			flex-wrap: wrap;
-			justify-content: flex-end;
-			align-content: flex-end;
-			padding-bottom: 100px;
-			font-family: 'raleway';
-
-			h2 {
-				width: 100%;
-				text-align: right;
-				font-size: 2.4rem;
-			}
-			p {
-				width: 100%;
-				text-align: right;
-				font-size: 1.6rem;
+			width: 100%;
+			font-weight: bold;
+			font-size: 1.8rem;
+			color: rgba(var(--keyRGB));
+			line-height: 1.9;
+			margin-bottom: 50px;
+			word-break: keep-all; /* 단어 단위로 줄바꿈 유지 */
+			opacity: 0;
+			transform: translateX(-100px);
+			transition: 0s;
+			&.on {
+				opacity: 1;
+				transform: translateX(0px);
+				transition: 1.5s;
 			}
 		}
-
-		.picWrapper {
-			width: 50% !important;
+		.ceoSubTitle {
+			font-weight: 200;
+			font-size: 0.8rem;
+			color: rgba(var(--keyRGB));
+			line-height: 3.8;
+			opacity: 0;
+			transform: translateX(-100px);
+			transition: 0s;
+			&.on {
+				opacity: 1;
+				transform: translateX(0px);
+				transition: 1.5s;
+			}
 		}
 	}
-
-	.memberListBox {
-		width: 100%;
+	.ceoImg {
+		width: 60%;
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: space-between;
-
-		.titBox {
-			width: 70%;
-
-			h2 {
-				font: 600 2rem/1 'orbitron';
-				color: #333;
-				letter-spacing: 1px;
-				margin-bottom: 20px;
-			}
-			p {
-				font: 300 1rem/1.2 'raleway';
-				color: #666;
-				margin-bottom: 50px;
-			}
+		justify-content: flex-end;
+		align-content: flex-end;
+		font-family: 'Amiri';
+		line-height: 1;
+		opacity: 0;
+		transform: translateX(100px);
+		transition: 0s;
+		&.on {
+			opacity: 1;
+			transform: translateX(0px);
+			transition: 1.5s;
 		}
-
-		ul {
-			width: 60%;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-between;
-
-			li {
-				width: 30%;
-				margin-bottom: 70px;
-
-				.pic {
-					width: 100%;
-					height: 15vw;
-					margin-bottom: 20px;
-
-					img {
-						width: 100%;
-						height: 100%;
-						object-fit: cover;
-					}
-				}
-
-				.txt {
-					h2 {
-						font: 700 1rem/1 'raleway';
-						margin-bottom: 10px;
-					}
-					p {
-						font-size: 0.6rem;
-					}
-				}
-			}
-		}
-
-		.descBox {
-			width: 28%;
-			display: flex;
-			flex-wrap: wrap;
-			align-content: center;
-			padding-bottom: 300px;
-
-			h2 {
-				font: 500 1.4rem/1 'orbitron';
-				color: #333;
-				margin-bottom: 30px;
-			}
-			p {
-				font-size: 1rem;
-				line-height: 1.3;
-				color: #777;
-				word-break: break-all;
-			}
+		.ceo {
+			width: 80%;
+			height: 100%;
+			object-fit: contain;
 		}
 	}
 }
 
-@media screen and (max-width: $tablet) {
-	.members {
-		.ceoBox {
-			.txt {
-				width: 100%;
-				padding-bottom: 30px;
-				justify-content: flex-start;
-
-				& > * {
-					text-align: left !important;
-				}
-
-				h2 {
-					font-size: 1.8rem;
-				}
-			}
-			.picWrapper {
-				width: 100% !important;
-				height: 45vh !important;
-			}
+.mid_1 {
+	width: 100%;
+	height: 30vh;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	color: rgba(var(--keyRGB));
+	margin-bottom: $margin;
+	.mid_1-1 {
+		width: 50%;
+		display: flex;
+		flex-wrap: wrap;
+		.minibox {
+			width: 230px;
+			height: 230px;
+			background-color: black;
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			line-height: 1.5rem;
+			padding: 15px;
 		}
-		.memberListBox {
-			.titBox {
-				width: 100%;
-			}
-			ul {
-				width: 100%;
-			}
-			.descBox {
-				width: 100%;
-			}
+		p {
+			color: white;
+		}
+		p:nth-child(1) {
+			font-weight: 500;
+		}
+		p:nth-child(2) {
+			font-size: 0.8rem;
+			font-weight: 600;
+			color: #555;
+			border-bottom: 0.5px solid #555;
+			padding: 2px;
+		}
+	}
+	.mid_1-2 {
+		width: 50%;
+		font-size: 1.5rem;
+		line-height: 3rem;
+		p {
+			padding-left: 15px;
+		}
+		p:nth-child(1) {
+			width: 100%;
+			font-weight: 500;
+			word-break: keep-all; /* 단어 단위로 줄바꿈 유지 */
+		}
+		p:nth-child(2) {
+			font-size: 0.8rem;
+			font-weight: 200;
+			color: #555;
 		}
 	}
 }
 
-@media screen and (max-width: $mobile) {
-	.members {
-		.ceoBox {
-			margin-bottom: 80px;
-			.picWrapper {
-				height: 30vh !important;
+.mid_2 {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	color: rgba(var(--keyRGB));
+	margin-bottom: $margin;
+	article {
+		width: 30%;
+		margin: 40px;
+		//자주 쓰이는 패턴
+		//먼저 .pic으로 이미지가 들어갈 프레임 크기를 지정
+		.pic {
+			width: 100%;
+			height: 300px;
+			margin-bottom: 10px;
+			//이후 안쪽 이미지 요소는 무조건
+			//너비와 높이를 100%로 설정한 뒤 object-fit:cover 지정
+			//그럼 pic프레임의 크기에 맞게 이미지가 박스 안쪽에 꽉 차셔 배치됨
+			.others {
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
 			}
 		}
-		.memberListBox {
-			ul {
-				li {
-					width: 47%;
-					.pic {
-						height: 30vw;
-					}
-				}
-			}
+		h3 {
+			font: bold 1.2rem/1 'arial';
+			color: #555;
+			margin-bottom: 10px;
+		}
+	}
+}
+
+.last {
+	width: 100%;
+	height: 300px;
+	margin-bottom: $margin;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	color: rgba(var(--keyRGB));
+	align-items: center;
+	.combineImg {
+		width: 300px;
+		height: 300px;
+		position: relative; /* 부모 요소를 기준으로 자식 요소의 절대 위치 설정 */
+		.perfume {
+			width: 230px;
+			height: 230px;
+			transform: rotate(0deg);
+			position: absolute;
+			bottom: 10%;
+			right: 10%;
+			box-shadow: 3px 3px 15px rgba(var(--keyRGB), 0.524);
+			z-index: 1;
+		}
+		.bgBox {
+			width: 230px;
+			height: 230px;
+			background-color: #ddd;
+			position: absolute;
+			bottom: 0;
+			left: 0%;
+			z-index: 0;
+		}
+	}
+	.lastText {
+		width: 50%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		p {
+			width: 100%;
+			color: rgba(var(--keyRGB));
+		}
+		p:nth-child(1) {
+			color: #555;
+			font-size: 0.8rem;
+			font-weight: 200;
+			margin-bottom: 15px;
+		}
+		p:nth-child(2) {
+			font-size: 1.5rem;
+			font-weight: 200;
+			color: #555;
+			padding: 2px;
+			word-break: keep-all; /* 단어 단위로 줄바꿈 유지 */
+			margin-bottom: 20px;
+		}
+	}
+	.buttons {
+		width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		box-sizing: border-box;
+		button:nth-child(1) {
+			width: 100px;
+			height: 30px;
+			background-color: black;
+			margin-right: 20px;
+			color: white;
+			border: none;
+		}
+		button:nth-child(2) {
+			width: 100px;
+			height: 30px;
+			background-color: #777;
+			color: black;
+			border: none;
+		}
+		button:hover {
+			cursor: pointer;
 		}
 	}
 }
