--- a/src/styles/sub/_members.scss
+++ b/src/styles/sub/_members.scss
@@ -160,6 +160,7 @@ main {
 		width: 300px;
 		height: 300px;
 		position: relative; /* 부모 요소를 기준으로 자식 요소의 절대 위치 설정 */
+		transition: transform 0.5s ease-in-out;
 		.perfume {
 			width: 230px;
 			height: 230px;
@@ -178,6 +179,9 @@ main {
 			bottom: 0;
 			left: 0%;
 			z-index: 0;
+		}
+		&.on {
+			transform: scale(1.2);
 		}
 	}
 	.lastText {
